# kbinxml-wasm

./: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json
pkg/: README.md  kbinxml_wasm.d.ts  kbinxml_wasm.js  kbinxml_wasm_bg.d.ts  kbinxml_wasm_bg.wasm  package.json
src/: error.rs  lib.rs  types.rs  utils.rs
