[package]
name = "kbinxml-wasm"
version = "0.1.0"
authors = ["Byeon Seongun <kamyu1537@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
base64 = "0.12.0"
kbinxml = { git = "https://github.com/mbilker/kbinxml-rs" }
