[package]
name = "kbinxml-wasm"
description = "konmai binary xml"
version = "2.0.2"
authors = ["Byeon Seongun <kamyu1537@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/kamyu1537/kbinxml-wasm.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.79"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
kbinxml = { git = "https://github.com/kamyu1537/kbinxml-rs" }
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
console_log = "1.0.0"
log = "0.4.17"

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
opt-level = "s"
